Fix Screenshot notification in UnifiedSystemTray.

This CL fixes Screenshot notification to be shown on UnifiedSystemTray.
Screenshot notification is the easiest example to reproduce, but it
could happen on other notifications.

MessageListView scroller's Layout() should be explicitly called before
UnifiedMessageCenterView's PreferredSizeChanged is called, as the result
of the layout affects the preferred size of UnifiedMessageCenterView.

TEST=manual
BUG=836699

Change-Id: I1f6c519052f8bd0561a26a40943acaffdb6e586f
Reviewed-on: https://chromium-review.googlesource.com/1027392
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554338}