ash/system/unified/unified_message_center_view.cc
@@ -132,9 +132,8 @@ void UnifiedMessageCenterView::OnViewPreferredSizeChanged(
 void UnifiedMessageCenterView::Update() {
   SetVisible(message_list_view_->GetNotificationCount() > 0);
 
-  scroller_->InvalidateLayout();
+  scroller_->Layout();
   PreferredSizeChanged();
-  Layout();
 }
 
 void UnifiedMessageCenterView::AddNotificationAt(
